--- a/02-pod.yaml
+++ b/02-pod.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
-kind: pod
+kind: Pod
 metadata:
  name: nginx
  labels:
   project: safety
 spec:
- containers:
-   - name: nginx
-     image: nginx
-     ports:
-      - containerPort: 80
+containers:
+  - name: nginx
+    image: nginx
+    ports:
+    - containerPort: 80
