Kubernetes pod resource file is created

--- a/02-pod.yaml
+++ b/02-pod.yaml
@@ -1,12 +1,14 @@
 apiVersion: v1
 kind: Pod
 metadata:
- name: nginx
- labels:
-  project: safety
+  name: nginx
+  namespace: roboshop
+  labels:
+    name: nginx
+    project: roboshop
 spec:
- containers:
- - name: nginx
-   image: nginx
-   ports:
-   - containerPort: 80
+  containers:
+  - name: nginx
+    image: nginx
+    ports:
+    - containerPort: 80
