Kubernetes namespace code created

--- a/02-pod.yaml
+++ b/02-pod.yaml
@@ -2,9 +2,10 @@ apiVersion: v1
 kind: Pod 
 metadata: 
   name: nginx
+  namespace: safety
   labels: 
     name: nginx
-    project: roboshop
+    project: safety
 spec:
   containers:
   - name: nginx
