--- a/01-namespace.yaml
+++ b/01-namespace.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: safety
+  name: safety  ## This one entire project
   labels:
     environment: development
     project: safety
