Kubernetes errors created

--- a/05-error-types.yaml
+++ b/05-error-types.yaml
@@ -9,5 +9,7 @@ metadata:
     version: v1
 spec:
   containers:
-  - name: nginx
-    image: nginxgg
+  # - name: nginx
+  #   image: nginxgg
+  - name: almalinux
+    image: almalinux:9
