Kubernetes resources usages

--- a/07-resources.yaml
+++ b/07-resources.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   containers:
   - name: nginx
-    image: inginx
+    image: nginx
     resources:
       requests:
         memory: "68Mi"
