--- a/10-pod-config.yaml
+++ b/10-pod-config.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1 
+apiVersion: v1
 kind: Pod
 metadata:
   name: configmap-demo
@@ -6,5 +6,5 @@ spec:
 - name: nginx
   image: nginx
   envFrom:
-  - ConfigMapRef: 
+  - configMapRef: 
       name: pod-config
