--- a/10-pod-config.yaml
+++ b/10-pod-config.yaml
@@ -1,10 +1,16 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: configmap-demo
+  name: config-map-demo
 spec:
-- name: nginx
-  image: nginx
-  envFrom:
-  - configMapRef: 
+  containers:
+  - name: nginx
+    image: nginx
+    envFrom:
+    - configMapRef: 
       name: pod-config
+
+
+
+
+
