secrets yaml file created

--- a/11-secrets.yaml
+++ b/11-secrets.yaml
@@ -1,4 +1,4 @@
-appVersion: v1 
+apiVersion: v1 
 kind: Secret
 metadata: 
   name: pod=Secret
@@ -7,3 +7,6 @@ type: Opaque
 data:
   username: "YWRtaW4K"
   password: "YWRtaW4xMjMK"
+
+
+
