--- a/11-secrets.yaml
+++ b/11-secrets.yaml
@@ -1,12 +1,9 @@
 apiVersion: v1 
 kind: Secret
 metadata: 
-  name: pod=Secret
+  name: pod=secret
 type: Opaque
 # data should be encoded.
 data:
   username: "YWRtaW4K"
   password: "YWRtaW4xMjMK"
-
-
-
