Service yaml file created

--- a/13-service.yaml
+++ b/13-service.yaml
@@ -8,6 +8,6 @@ spec:
     component: frontend
     environment: dev
   ports:
-    - protocol: tcp
+    - protocol: TCP
       port: 80 ## services port
       targetport: 80 ## container port
