--- a/13-service.yaml
+++ b/13-service.yaml
@@ -10,4 +10,4 @@ spec:
   ports:
     - protocol: TCP
       port: 80 ## services port
-      targetport: 80 ## container port
+      targetPort: 80 ## container port
