Replica yaml file created

--- a/19-replicaset.yaml
+++ b/19-replicaset.yaml
@@ -3,7 +3,7 @@ kind: ReplicaSet
 metadata:
   name: nginx
 # these are replica set labels
-  lebels:
+  labels:
     purpose: rs-demo
     project: safety
 spec:
