--- a/19-replicaset.yaml
+++ b/19-replicaset.yaml
@@ -7,7 +7,7 @@ metadata:
     purpose: rs-demo
     project: safety
 spec:
-  replicas: 15
+  replicas: 5
   selector:
     # these labels are used to select pods
     matchLabels:
@@ -22,4 +22,4 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx
+        image: nginx:trixie-perl
