--- a/20-deployment.yaml
+++ b/20-deployment.yaml
@@ -7,7 +7,7 @@ metadata:
     purpose: dp-demo
     project: safety
 spec:
-  replicas: 6
+  replicas: 20
   selector:
     # these labels are used to select pods
     matchLabels:
@@ -22,4 +22,4 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:trixie-perl
+        image: nginx
