--- a/20-deployment.yaml
+++ b/20-deployment.yaml
@@ -2,12 +2,12 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx
-# these are replica set labels
+# these are deployment labels
   labels:
     purpose: dp-demo
     project: safety
 spec:
-  replicas: 30
+  replicas: 3
   selector:
     # these labels are used to select pods
     matchLabels:
