Volumes instance updated

--- a/Volumes/05-efs-static.yaml
+++ b/Volumes/05-efs-static.yaml
@@ -13,3 +13,15 @@ spec:
   csi:
     driver: efs.csi.aws.com
     volumeHandle: fs-09d30c3262e0c60ea
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: efs-static
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: "" ## should be empty in static
+  resources:
+    requests:
+      storage: 5Gi
